Add feature to display Shorts as normal videos

--- a/src/popup.html
+++ b/src/popup.html
@@ -5,12 +5,24 @@
 		<link rel="stylesheet" href="popup.css">
 	</head>
 	<body>
-		<label class="toggle_button">
-			<div>
-				<input id="toggle_input" type="checkbox">
-			</div>
-			<span>Automatically Close Chat</span>
-		</label>
+		<ul>
+			<li id="enable-close-chat">
+				<label class="toggle-button">
+					<div>
+						<input type="checkbox">
+					</div>
+					<span>Automatically Close Chat</span>
+				</label>
+			</li>
+			<li id="enable-redirect-shorts">
+				<label class="toggle-button">
+					<div>
+						<input type="checkbox">
+					</div>
+					<span>Display Shorts as Normal</span>
+				</label>
+			</li>
+		</ul>
 
 		<script src="popup.js"></script>
 	</body>
